syntax = "proto3";
option go_package = "cdcon21builddriver/user/proto";

package user;

import  "google/protobuf/timestamp.proto";


service userSrv {
    rpc GetUserById(SearchId) returns (user) {}
    rpc GetUsers(SearchParams) returns (users) {}
    rpc GetUsersByEmail(SearchString) returns (users) {}
    rpc CreateUser(user) returns (response) {}
    rpc UpdateUser(user) returns (response) {}
    rpc DeleteUser(SearchId) returns (response) {}
    rpc BeforeCreateUser(user) returns (validationErr) {}
    rpc BeforeUpdateUser(user) returns (validationErr) {}
    rpc BeforeDeleteUser(user) returns (validationErr) {}
    rpc AfterCreateUser(user) returns (AfterFuncErr) {}
    rpc AfterUpdateUser(user) returns (AfterFuncErr) {}
    rpc AfterDeleteUser(user) returns (AfterFuncErr) {}
    rpc Auth(user) returns (Token) {}
    rpc ValidateToken(Token) returns (Token) {}
}

message response {
    user user = 1;
    int64 affectedCount = 2;
    validationErr validationErr = 3;
}

message user {
    int64 id =1;
    string firstname =2;
    string lastname =3;
    google.protobuf.Timestamp validFrom = 4;
    google.protobuf.Timestamp validThru = 5;
    bool active = 6;
    string pwd =7;
    string name =8;
    string email =9;
    string company =10;
    google.protobuf.Timestamp createdate = 11;
    google.protobuf.Timestamp updatedate = 12;
}

message users {
    repeated user user =1;
}

message SearchParams {
    int64 id = 1;
    string fisrtname = 2;
    string lastname = 3;
    google.protobuf.Timestamp validDate = 5;
    string email =6;
    string company =7;
    string pwd =8;
}

message SearchString {
    string value = 1;
}

message SearchId {
    int64 id = 1;
}

//message affectedCount {
//    int64 value = 1;
//}

message validationErr {
    repeated string failureDesc = 1;
}

message AfterFuncErr {
    repeated string failureDesc = 1;
}

message Token {
    string token = 1;
    bool valid = 2;
    string eUid = 3;
}